# TeXLens

./: .gitignore  .npmrc  2026-07-02-texlens-paddleocr-vl-desktop.md  2026-07-03-latex-compile-preview-goal.md  2026-07-04-texlens-tray-background-goal.md  2026-07-05-texlens-source-body-workbench-goal.md  LICENSE  README.md  eslint.config.js  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts
docs/: dependencies-and-licenses.md  developer-guide.md  troubleshooting.md  user-manual.md
samples/: README.md  generate_samples.py
scripts/: tauri-build-appimage.sh
sidecar/: README.md  pyproject.toml
sidecar/src/texlens_sidecar/: app.py  bench.py  cli.py  config.py  fastdeploy.py  latex.py  models.py  ocr.py  perf_record.py  storage.py
sidecar/tests/: test_app.py  test_config.py  test_fastdeploy.py  test_latex.py  test_ocr_pdf.py  test_storage.py
src/: App.tsx  api.ts  hotkeys.test.ts  hotkeys.ts  store.test.ts  store.ts  styles.css  testBridge.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
tests/e2e/: app.spec.ts
