[project]
name = "texlens-sidecar"
version = "0.1.0"
description = "TeXLens local FastDeploy sidecar for PaddleOCR-VL document OCR."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "TeXLens contributors" }]
dependencies = [
  "fastapi>=0.115.0",
  "huggingface-hub>=0.27.0",
  "httpx>=0.27.0",
  "pillow>=10.4.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "python-multipart>=0.0.9",
  "rich>=13.7.0",
  "typer>=0.12.0",
  "uvicorn[standard]>=0.30.0"
]

[project.optional-dependencies]
pdf = [
  "pymupdf>=1.24.0"
]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.8.0"
]

[project.scripts]
texlens-sidecar = "texlens_sidecar.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/texlens_sidecar"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py39"
